--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Credit Card App
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  You don't have a credit card yet.
+  Let's add a new one.
+  <div>
+    <button (click)="addCreditCard()" ion-button>Add a credit card</button>
+  </div>
 </ion-content>
